17258
running `scalac @libargs` will give:
```scala
/Users/dragos/workspace/git/scala/src/library/scala/concurrent/package.scala:58: error: CanAwait is already defined as trait CanAwait in package object concurrent
  sealed trait CanAwait
               ^
/Users/dragos/workspace/git/scala/src/library/scala/concurrent/package.scala:68: error: Await is already defined as object Await in package object concurrent
  object Await {
         ^
two errors found
```

It compiles fine if you hit the right file order, which apparently is known by ant. I marked it as critical, since I can't build the sources in the IDE (using Sbt, so I assume the Sbt build would have similar problems).

It looks like having a `package object concurrent` and a `package concurrent` in the same file is not a wise idea.
